# dbt-projects

./: .gitignore  .pre-commit-config.yaml  GROUPS-CATALOG.md  Makefile  Pipfile  README.md  fabrics.yml  groups-catalog.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh  teams-catalog.yml
.circleci/: config.yml
.github/workflows/: deploy-lightdash.yml  test.yml
docs/: template-migration.md
src/dbt_projects_cli/: main.py
src/dbt_projects_cli/commands/: descriptions.py  fabric.py  migrate.py  models.py  projects.py  scaffold.py  utils.py
src/dbt_projects_cli/config/: models.yaml
src/dbt_projects_cli/core/: fabric.py  group_catalog.py  model_parser.py  project_discovery.py  team_catalog.py  template_engine.py
src/dbt_projects_cli/integrations/: databricks.py  llm.py
src/dbt_projects_cli/schemas/: fabric.py
src/dbt_projects_cli/security/: pii_protection.py
src/dbt_projects_cli/templates/: multi_fabric_example.json  profiles_example.yml  schema_example.yml  template_config.yml
src/dbt_projects_cli/utils/: logging.py  templates.py
tests/: conftest.py  requirements.txt
tests/integration/: test_core_integration.py  test_databricks_integration.py  test_descriptions_commands.py  test_fabric_commands.py  test_llm_integration.py  test_main_cli_commands.py  test_main_cli_error_handling.py  test_migration_commands.py  test_models_commands.py  test_projects_commands.py  test_scaffold_basic_commands.py  test_scaffold_commands.py  test_schema_validation_integration.py  test_utils_commands.py
tests/unit/: test_databricks_unit.py  test_descriptions_command.py  test_fabric_deployment.py  test_fabric_schemas.py  test_llm_integration.py  test_main_cli.py  test_migrate_command.py  test_model_parser.py  test_models_command.py  test_multiple_fabrics.py  test_pii_protection.py  test_project_discovery.py  test_projects_command.py  test_template_engine.py  test_utils_command.py  test_utils_logging.py
(+13 files in other folders)
